--- a/SmoWebBase/templates/SmoWebBase/subtemplates/HomeSection.html
+++ b/SmoWebBase/templates/SmoWebBase/subtemplates/HomeSection.html
@@ -13,4 +13,8 @@
 		engineering problems. Please select the appropriate page/app from
 		the navigation bar on the top.
 	</p>
+	<p>
+		We highly recommend that you use <span style="font-weight: bold;">Mozilla Firefox</span> or
+		 <span style="font-weight: bold;">Google Chrome</span> to browse this website.
+	</p>
 </div>
