--- a/SmoWebBase/templates/SmoWebBase/Base.html
+++ b/SmoWebBase/templates/SmoWebBase/Base.html
@@ -13,18 +13,26 @@
     <!-- AngularJS -->   
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js"></script> 
 	<script src="{% static "ui-bootstrap-tpls-0.11.0.min.js" %}"></script>
-	
+	<script src="http://modernizr.com/downloads/modernizr-latest.js"></script>
 	
 	{% block scripts_and_styles %}
 	{% endblock %}	 
 	<script>
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+		//Checking if browser is IE and displaying a warning message.
+		var isIE = false || !!document.documentMode; // At least IE6
+		$(document).ready(function(){
+	  		if (isIE == true){
+	  			$("#browserAlert").show();
+	  		}
+		});		
+	  	
+	  	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 	
-	  ga('create', 'UA-56887236-1', 'auto');
-	  ga('send', 'pageview');
+	  	ga('create', 'UA-56887236-1', 'auto');
+	  	ga('send', 'pageview');
 	
 	</script>
 	</head>
@@ -81,6 +89,13 @@
 	          </div>
 	        </div>
 			<div style="margin-left: 180px;">
+			<div style="display: none;" id="browserAlert" class="alert alert-danger alert-dismissible" role="alert">
+				<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+				<span aria-hidden="true">&times;</span></button>
+				<span>You are using <span style="font-weight: bold;">Microsoft Internet Explorer</span>. This website is best viewed with 
+				<span style="font-weight: bold;">Mozilla Firefox</span> or 
+				<span style="font-weight: bold;">Google Chrome</span>.</span>
+			</div>
 			{% block content %}
 			{% endblock %}
 			</div>
