--- a/SmoWebBase/templates/SmoWebBase/Base.html
+++ b/SmoWebBase/templates/SmoWebBase/Base.html
@@ -4,20 +4,24 @@
 <!DOCTYPE HTML>
 <html lang="en">
 	<head>
-	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"> 
+	<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"> 
 	<link rel="stylesheet" href="{% static 'css/Base.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/SmoInputOutputView.css' %}">
     
+    <!-- polyfill for min/max-width CSS3 Media Queries (for IE 6-8, and more) -->
+    <script src="{% static 'js/respond.js' %}"></script>
+    
     <!-- JQuery -->
- 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>      
+ 	<script src="{% static 'js/jquery.min.js' %}"></script>
+    
     <!-- AngularJS -->   
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js"></script> 
-	<script src="{% static "ui-bootstrap-tpls-0.11.0.min.js" %}"></script>
-	<script src="http://modernizr.com/downloads/modernizr-latest.js"></script>
+    <script src="{% static 'js/angular.min.js' %}"></script> 
+	<script src="{% static 'js/ui-bootstrap-tpls-0.11.0.min.js' %}"></script>
 	
-	{% block scripts_and_styles %}
-	{% endblock %}	 
-	<script>
+	<!-- HTML5/CSS3 feature detection library -->
+	<script src="{% static 'js/Modernizr.js' %}"></script>
+	 
+	<script>		
 		//Checking if browser is IE and displaying a warning message.
 		var isIE = false || !!document.documentMode; // At least IE6
 		$(document).ready(function(){
@@ -35,6 +39,8 @@
 	  	ga('send', 'pageview');
 	
 	</script>
+	{% block scripts_and_styles %}
+	{% endblock %}
 	</head>
 	
 	<body>	
@@ -104,9 +110,6 @@
 	<!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-	<script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>
-  
-    <!-- Link to navbar template -->
-	<!--     http://getbootstrap.com/examples/navbar-fixed-top/ -->
+	<script src="{% static 'js/bootstrap.min.js' %}"></script>
 	</body>
 </html>
