--- a/SmoWebBase/templates/SmoWebBase/ModelViewTemplate.html
+++ b/SmoWebBase/templates/SmoWebBase/ModelViewTemplate.html
@@ -10,7 +10,7 @@
 {% endfor %}
 
 {% comment %}  Load SmoWeb JS libraries {% endcomment %}
-<script src="{% static 'SmoUtil.js' %}"></script>
+<script src="{% static 'js/SmoUtil.js' %}"></script>
 
 {% comment %}  Angular application and controller for the page {% endcomment %}
 <script>
