--- a/SmoWebBase/templates/SmoWebBase/Base.html
+++ b/SmoWebBase/templates/SmoWebBase/Base.html
@@ -20,6 +20,9 @@
 	
 	<!-- HTML5/CSS3 feature detection library -->
 	<script src="{% static 'js/Modernizr.js' %}"></script>
+	
+	<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7; IE=EmulateIE9;">
+    <!--[if IE]><script src="{% static 'js/excanvas.js' %}"></script><![endif]-->
 	 
 	<script>		
 		//Checking if browser is IE and displaying a warning message.
