--- a/SmoWebBase/templates/SmoWebBase/ModelViewTemplate.html
+++ b/SmoWebBase/templates/SmoWebBase/ModelViewTemplate.html
@@ -31,14 +31,16 @@ angular.module('{{pageView.name}}', ['ui.bootstrap', 'smo'])
 	    $httpProvider.defaults.xsrfHeaderName = 'X-CSRFToken';
 	}])
 	.config(['$locationProvider', function($locationProvider) {
+	 	//Checks for html5 compatibility
 	 	if (Modernizr.canvas){
 	 		$locationProvider.html5Mode(true).hashPrefix('!');
 	 	} else {
 	 		$locationProvider.html5Mode(false);
-	 	}
+	 	}	 	
 	}])
 	.controller('{{pageView.controllerName}}', 
 		[ '$scope', '$location', function($scope, $location) {
+		
 		$scope.$location = {};
  		angular.forEach("protocol host port path search hash absUrl".split(" "), function(method){
 	    	$scope.$location[method] = function(){
