Implemented populating the angular controller in ModelViewTemplate with injected variables as specified in the corresponding django view class
Signed-off-by: Ivaylo Mihaylov <ivombg@yahoo.com>

--- a/SmoWebBase/templates/SmoWebBase/ModelViewTemplate.html
+++ b/SmoWebBase/templates/SmoWebBase/ModelViewTemplate.html
@@ -39,7 +39,16 @@ angular.module('{{pageView.name}}', ['ui.bootstrap', 'smo'])
 	 	}	 	
 	}])
 	.controller('{{pageView.controllerName}}', 
-		[ '$scope', '$location', 'ModelCommunicator', 'variables', function($scope, $location, ModelCommunicator, variables) {
+		[ '$scope', '$location'
+			{% for injectVar in pageView.injectVariables %}
+				,'{{injectVar}}'
+			{% endfor %},
+		function($scope, $location 
+			{% for injectVar in pageView.injectVariables %}
+				,{{injectVar}}
+			{% endfor %}
+		)
+		{
 		
 		$scope.$location = {};
  		angular.forEach("protocol host port path search hash absUrl".split(" "), function(method){
