Integrated the jinja template engine
Signed-off-by: Ivaylo Mihaylov <ivombg@yahoo.com>

--- a/SmoWebBase/templates/SmoWebBase/subtemplates/UnitConverterBlock.html
+++ b/SmoWebBase/templates/SmoWebBase/subtemplates/UnitConverterBlock.html
@@ -15,13 +15,13 @@
 		</div>
 		<div class="results-group">
 			<div class="field" ng-repeat="unit in choiceVar.unitsArr track by $index">
-{% verbatim %}
+{% raw %}
 				<div ng-form name="Form{{$index}}" class="field-input">
 					<input name="input" type="text" ng-model="unit[2]" ng-pattern="/^[-+]?[0-9]*\.?[0-9]+([eE][-+]?[0-9]+)?$/" ng-change="choiceVar.updateValues($index, Form{{$index}}.input.$error.pattern)">
 				</div>
 				<div class="field-label" ng-bind="unit[0]"></div>
 				<div class="input-error" ng-show="Form{{$index}}.input.$error.pattern">Enter a valid number</div>
-{% endverbatim %}
+{% endraw %}
 			</div>
 		</div>
 	</div>
