--- a/SmoWebBase/templates/SmoWebBase/blocks/HomeBlock.jinja
+++ b/SmoWebBase/templates/SmoWebBase/blocks/HomeBlock.jinja
@@ -16,7 +16,7 @@
 										src="{{ static(module.figure.src.replace('img', 'img/thumbnails').replace('.svg', '_thumb.png')) }}"
 									{% else %}
 										style="opacity: 0.5; filter: alpha(opacity=50);"
-										src="{{ static('img/thumbnails/SysMoLogo_thumb.png') }}"
+										src="{{ static('img/thumbnails/Calculator.png') }}"
 									{% endif %}
 								/>
 							</a>
@@ -31,7 +31,7 @@
 	{% endfor %}
 {% endfor %}
 </div>
-<div style="background: white; padding: 20px;">		
+<div style="background: white; padding: 20px; border-radius: 10px;">		
 	<p>
 		Welcome to <strong>SmoWeb</strong>, the open computational platform from 
 		<a class="reference external" href="http://www.sysmoltd.com">SysMo</a>. Here you will find a
