Selection animation for thumbnails.
Signed-off-by: Ivaylo Mihaylov <ivombg@yahoo.com>

--- a/SmoWebBase/static/css/Base.css
+++ b/SmoWebBase/static/css/Base.css
@@ -209,6 +209,10 @@ h1.title {
 	background-color: white;
 }
 
+.thumb:focus, .thumb:hover{
+	border: solid 3px #0875CA;
+}
+
 /* Content */
 #content {
 	height: auto; 
