--- a/SmoWebBase/static/css/Base.css
+++ b/SmoWebBase/static/css/Base.css
@@ -210,7 +210,7 @@ h1.title {
 }
 
 .thumb:focus, .thumb:hover{
-	border: solid 3px #0875CA;
+	border: solid 2px #0875CA;
 }
 
 /* Content */
@@ -221,7 +221,7 @@ h1.title {
 }
 
 /* Documentation */
-div.docview {
+div.restview {
 	background-color:white; 
 	border: solid 1px #CCC;
 	padding: 50px;
