--- a/SmoWebBase/static/css/Base.css
+++ b/SmoWebBase/static/css/Base.css
@@ -199,13 +199,14 @@ h1.title {
 /* Model Thumbnail */
 .thumb {
 	display: inline-block;
-	width: 180px;
-	height: 180px;
+	width: 160px;
+	height: 160px;
 	vertical-align: bottom;
 	border-radius: 10px;
 	border: solid 1px grey;
 	text-align: center;
-	margin-bottom: 5px;
+	margin-bottom: 10px;
+	margin-right: 5px;
 	background-color: white;
 }
 
