--- a/SmoWebBase/templates/SmoWebBase/restblocks/html/Company.html
+++ b/SmoWebBase/templates/SmoWebBase/restblocks/html/Company.html
@@ -1,5 +1,6 @@
-<div class="document" id="welcome-to-the-world-of-simulations">
-<h1 class="title">Welcome to the world of simulations</h1>
+<div class="document" id="sysmo">
+<h1 class="title">SysMo</h1>
+<p class="align-center">Open software and hardware development</p>
 <div class="section" id="what-we-can-do-for-you">
 <h1>What we can do for you</h1>
 <ul class="simple">
@@ -11,13 +12,13 @@
 <div class="section" id="what-is-special-about-us-is-that-we-can">
 <h1>What is special about us is that we can...</h1>
 <ul class="simple">
-<li>help you design your own simulation product.</li>
+<li>help you design your own simulation product</li>
 <li>combine, customize, optimize existing tools for your particular need</li>
 </ul>
-<p>Mathematical libraries, equation solvers, mesh generators, pre- and post-processing tools, parallelization software- everything is already available, very often at no cost. We will simply put the pieces together for you.</p>
+<p>Mathematical libraries, equation solvers, mesh generators, pre- and post-processing tools, parallelization software - everything is already available, very often at no cost. We will simply put the pieces together for you.</p>
 </div>
-<div class="section" id="get-to-know-us-better">
-<h1>Get to know us better</h1>
-<p>Learn more about SysMo <a class="reference external" href="http:///">here</a></p>
+<div class="section" id="want-to-get-to-know-us-better">
+<h1>Want to get to know us better?</h1>
+<p>Learn more about SysMo <a class="reference external" href="/SmoWebBase/Sysmo">here</a></p>
 </div>
 </div>
