Implemented custom restructured text writer
Signed-off-by: Ivaylo Mihaylov <ivombg@yahoo.com>

--- a/SmoWebBase/templates/SmoWebBase/restblocks/html/People.html
+++ b/SmoWebBase/templates/SmoWebBase/restblocks/html/People.html
@@ -11,9 +11,9 @@
 <td><img alt="MBorisov" src="/static/img/people/MBorisov.jpg" /></td>
 <td><img alt="IMihaylov" src="/static/img/people/IMihaylov2.jpg" /></td>
 </tr>
-<tr><td><a class="reference internal" href="#atanas-pavlov">Atanas Pavlov</a></td>
-<td><a class="reference internal" href="#milen-borisov">Milen Borisov</a></td>
-<td><a class="reference internal" href="#ivaylo-mihaylov">Ivaylo Mihaylov</a></td>
+<tr><td><a class="reference internal" href="#atanas-pavlov" target="_self">Atanas Pavlov</a></td>
+<td><a class="reference internal" href="#milen-borisov" target="_self">Milen Borisov</a></td>
+<td><a class="reference internal" href="#ivaylo-mihaylov" target="_self">Ivaylo Mihaylov</a></td>
 </tr>
 <tr><td>Simulations, controllers, software development</td>
 <td>Simulations, software development</td>
@@ -43,8 +43,8 @@ Sofia University &quot;St. Kliment Ohridski&quot;, B.S. in Informatics (2004), M
 2003-2010 Mapex JSC, Sofia, Bulgaria, GIS software development</p>
 <p>Publications/patents:
 [1] Borisov, M., Dimitrova, N., 2010. One-parameter bifurcation analysis of dynamical systems using maple. Serdica Journal of Computing 4 (1), 43--56. ISSN 1312-6555. IF 1.472</p>
-<p>[2] Borisov, M., Dimitrova, N., 2011. Stability analysis in a model of 1,2-dichloroethane biodegradation by klebsiella oxytoca va 8391 immobilized on granulated activated carbon. AIP Conference Proceedings 1404, 284--298. doi: <a class="reference external" href="http://dx.doi.org/10.1063/1.3659931">http://dx.doi.org/10.1063/1.3659931</a></p>
-<p>[3] Borisov, M., Dimitrova, N., Beschkov, V., 2012. Stability analysis of a bioreactor model for biodegradation of xenobiotics. Computers and Mathematics with Applications, vol. 64, No. 3, 361--373. ISSN 0898-1221. doi: <a class="reference external" href="http://dx.doi.org/10.1016/j.camwa.2012.02.067">http://dx.doi.org/10.1016/j.camwa.2012.02.067</a></p>
+<p>[2] Borisov, M., Dimitrova, N., 2011. Stability analysis in a model of 1,2-dichloroethane biodegradation by klebsiella oxytoca va 8391 immobilized on granulated activated carbon. AIP Conference Proceedings 1404, 284--298. doi: <a class="reference external" href="http://dx.doi.org/10.1063/1.3659931" target="_self">http://dx.doi.org/10.1063/1.3659931</a></p>
+<p>[3] Borisov, M., Dimitrova, N., Beschkov, V., 2012. Stability analysis of a bioreactor model for biodegradation of xenobiotics. Computers and Mathematics with Applications, vol. 64, No. 3, 361--373. ISSN 0898-1221. doi: <a class="reference external" href="http://dx.doi.org/10.1016/j.camwa.2012.02.067" target="_self">http://dx.doi.org/10.1016/j.camwa.2012.02.067</a></p>
 <p>[4] Borisov, M., 2012. Biftools: Maple package for bifurcation analysis of dynamical systems. Bulgarian Academy of Sciences, Institute of Mathematics and Informatics, Scientific Reports No. 1/2012, 35 pages; ISSN 1314-541X</p>
 </div>
 <div class="section" id="ivaylo-mihaylov">
