--- a/ThermoFluids/templates/ThermoFluids/restblocks/html/FluidPropertiesDoc.html
+++ b/ThermoFluids/templates/ThermoFluids/restblocks/html/FluidPropertiesDoc.html
@@ -53,10 +53,10 @@ value in the range 0-1 for <em>q</em>.</p>
 <div class="section" id="coolprop-package">
 <h1>2.&nbsp;&nbsp;&nbsp;CoolProp package</h1>
 <p>All the fluid properties on this page are calculated using the open-source property
-package <a class="reference external" href="http://www.coolprop.org/">CoolProp</a>. CoolProp is an open-source,
+package <a class="reference external" href="http://www.coolprop.org/" target="_self">CoolProp</a>. CoolProp is an open-source,
 cross-platform, free property database based on C++ that includes pure fluids,
 pseudo-pure fluids, and humid air properties. A complete list of all the materials
-implemented in CoolProp can be found <a class="reference external" href="http://www.coolprop.org/FluidInformation.html">here</a></p>
+implemented in CoolProp can be found <a class="reference external" href="http://www.coolprop.org/FluidInformation.html" target="_self">here</a></p>
 <p><strong>Caution</strong>: When using pseudo-pure fluids (like Air), there is a chance you may obtain funny values
 for properties under ceratain conditions (e.g. at a low temperature). Thus, better use pure fluids
 (e.g. Nitrogen) whenever possible.</p>
