--- a/ThermoFluids/templates/ThermoFluids/restblocks/html/PipeFlowDoc.html
+++ b/ThermoFluids/templates/ThermoFluids/restblocks/html/PipeFlowDoc.html
@@ -1,8 +1,8 @@
 <div class="document" id="pipe-flow">
 <h1 class="title">Pipe Flow</h1>
 <div class="figure align-center">
-<object data="/static/ThermoFluids/img/StraightPipe.svg" style="width: 500px;" type="image/svg+xml">
-/static/ThermoFluids/img/StraightPipe.svg</object>
+<img src="/static/ThermoFluids/img/StraightPipe.svg" style="width: 500px;">
+</img>
 <p class="caption">Pipe parameters</p>
 </div>
 <div class="section" id="parameters">
@@ -150,7 +150,7 @@ all flow regimes: laminar, transitional and turbulent:</p>
 <table class="docutils citation" frame="void" id="wikip-dff" rules="none">
 <colgroup><col class="label" /><col /></colgroup>
 <tbody valign="top">
-<tr><td class="label"><a class="fn-backref" href="#id1">[Wikip-DFF]</a></td><td><a class="reference external" href="http://en.wikipedia.org/wiki/Darcy_friction_factor_formulae">http://en.wikipedia.org/wiki/Darcy_friction_factor_formulae</a></td></tr>
+<tr><td class="label"><a class="fn-backref" href="#id1">[Wikip-DFF]</a></td><td><a class="reference external" href="http://en.wikipedia.org/wiki/Darcy_friction_factor_formulae" target="_self">http://en.wikipedia.org/wiki/Darcy_friction_factor_formulae</a></td></tr>
 </tbody>
 </table>
 <table class="docutils citation" frame="void" id="church77" rules="none">
