--- a/SmoWebBase/templates/SmoWebBase/restblocks/html/Company.html
+++ b/SmoWebBase/templates/SmoWebBase/restblocks/html/Company.html
@@ -19,6 +19,6 @@
 </div>
 <div class="section" id="want-to-get-to-know-us-better">
 <h1>Want to get to know us better?</h1>
-<p>Learn more about SysMo <a class="reference external" href="/SmoWebBase/Sysmo">here</a></p>
+<p>Learn more about SysMo <a class="reference external" href="/SmoWebBase/Sysmo" target="_self">here</a></p>
 </div>
 </div>
